2004-01-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gsterror.h:
          fix wrong GST_LIBRARY_ERROR_ENCODE addition

2004-01-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstelement.c: (gst_element_error_full):
	* gst/gstelement.h:
          change _extended to _full

2004-01-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	reviewed by: <delete if not using a buddy>

	* docs/gst/tmpl/gst.sgml:
	* docs/gst/tmpl/gstbuffer.sgml:
	* docs/gst/tmpl/gstclock.sgml:
	* docs/gst/tmpl/gstelement.sgml:
	* docs/gst/tmpl/gstreamer-unused.sgml:
	* docs/gst/tmpl/gstxml.sgml:
	* gst/gstelement.c: (gst_element_error_full):
	* gst/gstelement.h:

2004-01-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstelement.h: fix _gst_element_error_printf prototype

2004-01-20  David Schleef  <ds@schleef.org>

	* gst/gststructure.c: (gst_structure_to_string):
	Convert function to use gst_value_serialize().
	* gst/gstvalue.c: (gst_value_serialize_list),
	(gst_value_serialize_fourcc), (gst_value_serialize_int_range),
	(gst_value_serialize_double_range), (gst_value_serialize_boolean),
	(gst_value_serialize_int), (gst_value_serialize_double),
	(gst_string_wrap), (gst_value_serialize_string),
	(gst_value_serialize), (gst_value_deserialize):
	* gst/gstvalue.h:
	Add implementations for serialize.

2004-01-20  Julien MOUTTE  <julien@moutte.net>

	* gst/gsterror.h: xvidenc.c needs GST_LIBRARY_ERROR_ENCODE. Dunno if
	we want to keep that one in the future or change xvidenc.c to use 
	another error.

2004-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstelement.c: (_gst_element_error_printf):
	* gst/gstelement.h:
          privatise function

2004-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/random/error:
          doc explaining error system
	* gst/elements/gstfilesrc.c: (gst_filesrc_open_file):
          cleanup

2004-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>
