@@ -233,12 +233,15 @@ GstTagList *	gst_event_tag_get_list		(GstEvent *		tag_event);
 #define GST_TAG_DURATION		"duration"
 #define GST_TAG_CODEC			"codec"
 #define GST_TAG_BITRATE			"bitrate"
+#define GST_TAG_NOMINAL_BITRATE		"nominal-bitrate"
 #define GST_TAG_MINIMUM_BITRATE		"minimum-bitrate"
 #define GST_TAG_MAXIMUM_BITRATE		"maximum-bitrate"
-#define GST_TAG_TRACK_GAIN		"replaygain_track_gain"
-#define GST_TAG_TRACK_PEAK		"replaygain_track_peak"
-#define GST_TAG_ALBUM_GAIN  		"replaygain_album_gain"
-#define GST_TAG_ALBUM_PEAK		"replaygain_album_peak"
+#define GST_TAG_SERIAL			"serial"
+#define GST_TAG_ENCODER_VERSION		"encoder-version"
+#define GST_TAG_TRACK_GAIN		"replaygain-track-gain"
+#define GST_TAG_TRACK_PEAK		"replaygain-track-peak"
+#define GST_TAG_ALBUM_GAIN  		"replaygain-album-gain"
+#define GST_TAG_ALBUM_PEAK		"replaygain-album-peak"
 
 
 G_END_DECLS
